--- a/shopping-list-redux/index.html
+++ b/shopping-list-redux/index.html
@@ -14,7 +14,9 @@
         <form id="js-shopping-list-form">
             <label for="shopping-list-entry">Add an item</label>
             <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
-            <button type="submit">Add item</button>
+            <button type="submit">Add item</button><br>
+            <label name="displayChecked">See your checked items?</label>
+            <input type="checkbox" class="displayChecked" name=DisplayChecked checked>
         </form>
         <ul class="shopping-list js-shopping-list">
         </ul>
