addd handlerSearchInput funciton

--- a/shopping-list-redux/index.html
+++ b/shopping-list-redux/index.html
@@ -16,8 +16,10 @@
             <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
             <button type="submit">Add item</button><br>
             <label name="displayChecked">See your checked items?</label>
-            <input type="checkbox" class="displayChecked" name=DisplayChecked checked>
+            <input type="checkbox" class="displayChecked" name=DisplayChecked checked><br>
+            <label name="itemSearch">Search your list</label>
         </form>
+        <input type="text" class="itemSearch" name="itemSearch" placeholder="Search">
         <ul class="shopping-list js-shopping-list">
         </ul>
     </div>
